# LeetCode

./: README.md
.github/workflows/: tests.yml
Go/: 11.go  1431.go  151.go  1732.go  1768.go  206.go  283.go  392.go
python/: .gitignore
python/1061/: README.md  pyproject.toml
python/1061/src/leetcode1061_ndam/: smallestEquivalentString.py  unionfindSES.py
python/1061/tests/: test_smallestEquivalentString.py
python/136/: README.md  pyproject.toml
python/136/src/leetcode136_ndam/: singleNum.py
python/136/tests/: test_singleNum.py
python/20/: README.md  pyproject.toml  test_twenty.py
python/20/src/leetcode20_ndam/: twenty.py
python/20/tests/: test_twenty.py
python/215/: LICENSE  README.md  pyproject.toml
python/215/src/leetcode215_ndam/: kthLargest.py
python/215/tests/: test_kthLargest.py
python/373/: README.md  pyproject.toml
python/373/src/leetcode373_ndam/: kPairs.py
python/373/tests/: test_kPairs.py
python/53/: README.md  pyproject.toml
python/53/src/leetcode53_ndam/: maxSubarr.py
python/53/tests/: test_maxSubarr.py
