[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leetcode20_ndam"
version = "0.0.1"
authors = [
  { name="Nicolas Michel", email="nicolas.d.michel@icloud.com" },
]
description = "Implementation of leetcode20, mainly for experimenting with testing tools in python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]


[tool.pytest.ini_options]
testpaths = [
    "tests",
]
